菜品管理功能CURD和七牛云支持
修改dishes表
所有字段非空
dish_recommend、dish_oordered字段默认为0
dish_name长度为255，dish_name、rest_id为唯一键

修正model、dao、service内的dish_status属性类型为int
修正dao内的deleteDish方法参数dishId类型为long

TODO: 在菜品的编辑和删除时，对菜品是否在使用中的检测

其他细节修改

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1028,7 +1028,7 @@ standard deployment descriptor.
     <filter-name>UserAuthFilter</filter-name>
     <url-pattern>/User/*</url-pattern>
   </filter-mapping>
-  
+
   
   
   <servlet>
@@ -1043,6 +1043,26 @@ standard deployment descriptor.
     <servlet-name>TableEditorServlet</servlet-name>
     <servlet-class>com.qrrest.servlet.user.TableEditorServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>CategoryEditorServlet</servlet-name>
+    <servlet-class>com.qrrest.servlet.user.CategoryEditorServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>PicUploaderGatewayServlet</servlet-name>
+    <servlet-class>com.qrrest.servlet.user.PicUploaderGatewayServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>PicUploaderCallbackServlet</servlet-name>
+    <servlet-class>com.qrrest.servlet.user.PicUploaderCallbackServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>DishEditorServlet</servlet-name>
+    <servlet-class>com.qrrest.servlet.user.DishEditorServlet</servlet-class>
+  </servlet>
+
+
+
+
 
 
   
@@ -1058,13 +1078,29 @@ standard deployment descriptor.
     <servlet-name>TableEditorServlet</servlet-name>
     <url-pattern>/User/TableEditor.do</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CategoryEditorServlet</servlet-name>
+    <url-pattern>/User/CategoryEditor.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PicUploaderGatewayServlet</servlet-name>
+    <url-pattern>/User/PicUploaderGateway.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PicUploaderCallbackServlet</servlet-name>
+    <url-pattern>/User/PicUploaderCallback.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DishEditorServlet</servlet-name>
+    <url-pattern>/User/DishEditor.do</url-pattern>
+  </servlet-mapping>
   
   
   
   
   
   <welcome-file-list>
-    <welcome-file>/User/Login.jsp</welcome-file>
+    <welcome-file>/User/_Page_Welcome_.jsp</welcome-file>
   </welcome-file-list>
   
   
