修改restaurants表和餐厅信息查看、编辑
修改restaurants表
除rest_upid外设为非空
rest_name调整为255长度，并设置唯一键
rest_type设置索引
rest_upid修正外键更新约束为CASCADE

dao层增加对rest_upid默认值检测，当rest_upid值为0表示数据库中的值为null

修改“餐厅管理”名词为“餐厅信息”

实现餐厅信息查看、编辑功能

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1059,6 +1059,11 @@ standard deployment descriptor.
     <servlet-name>DishEditorServlet</servlet-name>
     <servlet-class>com.qrrest.servlet.user.DishEditorServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>RestaurantEditorServlet</servlet-name>
+    <servlet-class>com.qrrest.servlet.user.RestaurantEditorServlet</servlet-class>
+  </servlet>
+
 
 
 
@@ -1093,6 +1098,10 @@ standard deployment descriptor.
   <servlet-mapping>
     <servlet-name>DishEditorServlet</servlet-name>
     <url-pattern>/User/DishEditor.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>RestaurantEditorServlet</servlet-name>
+    <url-pattern>/User/RestaurantEditor.do</url-pattern>
   </servlet-mapping>
   
   
